Use kernel headers for netlink commands and attrs
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 # XXX: Relocate strlcat.c to $topdir/lib when autotools arrives
-LDLIBS = -lmnl
+LDLIBS += -lmnl
+CPPFLAGS += -I../kernel
 
 all: ubr
 
