Build kernel module against long-term stable
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 # Defaults to GNU GCC and autotools: ./configure && make && make test
 language: c
 
+env:
+  - KDIR=/tmp/linux-4.19.72
+
 # Use docker for quicker builds, it now allows https://docs.travis-ci.com/user/apt/
 sudo: false
 
@@ -20,6 +23,11 @@ addons:
       - tree
       - libmnl-dev
       - linux-headers-generic
+
+install:
+  - cd /tmp
+  - wget https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.19.72.tar.xz
+  - tar xf linux-4.19.72.tar.xz
 
 script:
   - make
