--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - wget https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.19.72.tar.xz
   - tar xf linux-4.19.72.tar.xz
   - cd linux-4.19.72/
-  - make defconfig
+  - make tinyconfig
   - make -j5
   - popd
 
