--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ install:
   - tar xf linux-5.2.14.tar.xz
   - cd linux-5.2.14/
   - make tinyconfig
+  - ./scripts/config -e BINFMT_ELF -e MODULES
+  - make olddefconfig
   - make -j5
   - popd
 
