Initial support for sending 'fdb flush' command from userspace
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CPPFLAGS += -I../kernel
 
 all: ubr
 
-ubr: ubr.o cmdl.o msg.o port.o vlan.o
+ubr: ubr.o cmdl.o msg.o fdb.o port.o vlan.o
 
 clean:
 	$(RM) ubr
@@ -11,4 +11,4 @@ clean:
 distclean: clean
 	$(RM) *.o *~
 
-ubr.o cmdl.o vlan.o msg.o: Makefile cmdl.h msg.h port.h vlan.h
+ubr.o cmdl.o vlan.o msg.o: Makefile cmdl.h msg.h fdb.h port.h vlan.h
