Refactor for a slightly more professional look
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,23 @@
+# For cross-compiling you need a pre-built libmnl and to set the
+# following environment variables:
+# PATH=/path/to/cross/toolchain/bin:$PATH
+# CC=cross-tool-prefix-gcc
+# CPPFLAGS=-I/path/to/headers
+# LDFLAGS=-L/path/to/libmnl.{a,so}
+
+OBJS     := ubr.o cmdl.o msg.o fdb.o port.o vlan.o
+HDRS     :=       cmdl.h msg.h fdb.h port.h vlan.h private.h
 LDLIBS   += -lmnl
 CPPFLAGS += -I../kernel
 
 all: ubr
 
-ubr: ubr.o cmdl.o msg.o fdb.o port.o vlan.o
+ubr: $(OBJS)
 
 clean:
-	$(RM) ubr
+	$(RM) ubr $(OBJS)
 
 distclean: clean
 	$(RM) *.o *~
 
-ubr.o cmdl.o vlan.o msg.o: Makefile cmdl.h msg.h fdb.h port.h vlan.h
+$(OBJS): Makefile $(HDRS)
